--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section> 
+    <section class="top-banner"> 
         <div class="half-width"> 
     <h1> Welcome To </h1>
     <h1><span class="name-highlight"> Delwar </span> Website </h1>
     <h3> World-class professional web Developer </h3>
     <p> You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+    <a class="link-button" target="_blank" href="https://www.linkedin.com/in/delwar-hossain-8ab579203/"> HIRE ME </a>
         </div>
         <div class="half-width"> 
             <img src="picture/mypicture1.png">
