--- a/index.html
+++ b/index.html
@@ -12,15 +12,51 @@
     <section class="top-banner"> 
         <div class="half-width"> 
     <h1> Welcome To </h1>
-    <h1><span class="name-highlight"> Delwar </span> Website </h1>
+    <h1><span class="orange-highlight"> Delwar </span> Website </h1>
     <h3> World-class professional web Developer </h3>
     <p> You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
     <a class="link-button" target="_blank" href="https://www.linkedin.com/in/delwar-hossain-8ab579203/"> HIRE ME </a>
         </div>
         <div class="half-width"> 
-            <img src="picture/mypicture1.png">
+            <img src="picture/mypicture4.png">
         </div>
 </section>
+
+<section class="dream-area">
+       <div class="half-width">
+        <img src="picture/mypicture3.png">
+
+       </div>
+
+       <div class="half-width"> 
+        <h2> Big Dream </h2>
+        <h3> Become Best Developer </h3>
+        <p> I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="link-button" target="_blank" href="https://web.facebook.com/sai.di.3950/"> VISIT MY FB PROFILE</a>
+
+       </div>
+</section>
+
+       <section class="experience">
+           <h2> Experiences</h2>
+          <div id="full-stack" class="half-width single-experience">
+           <h2> Full Stack Web Developer</h2>
+           <h3 class="orange-highlight" > 2022-Present | Pro Level Web Developer</h3>
+           <p> I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+          </div>
+          
+          <div id="baby-web" class="half-width single-experience"> 
+          <h2> Baby Web Developer</h2>
+          <h3 class="orange-highlight" > 2021-2022 | Programming Hero Learner</h3>
+          <p> They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero. </p>
+
+          </div>
+       </section>
+
+          <footer>
+              <p> © Delwar 2021, all rights reserved. </p>
+          </footer>
 
 </body>
 </html>
